--- a/PracticaFinal/estil.less
+++ b/PracticaFinal/estil.less
@@ -13,11 +13,6 @@ html{
     height: 100vh;
 
     body{
-        background-image: url("./assets/back1.jpg");
-
-        margin-left: 200px;
-        margin-right: 200px;
-
         color: white;
 
         .p3,.p2,.p1{font-family: 'Regular', sans-serif;}
@@ -28,255 +23,290 @@ html{
 
         h1{font-size: 80px;} h2{font-size: 56px;}
 
-        header{
-            background-color: transparent;
+        #fons1{
+            background-image: url("./assets/back1.jpg");
 
-            .opacitatBuscador{
-                background-color: rgba(255, 255, 255, 0.205);
-            }   
+            .div1{
+                margin-left: 200px;
+                margin-right: 200px;
 
-            .navegacio{
-                display: flex;
-                justify-content: center;
-
-                p{
-                    padding: 20px;
-                    margin-left: 30px;
-                }
-            }
-
-            margin-top: 30px;
-        }
-
-        #part1{
-            display: grid;
-
-            grid-template-columns: 1fr 1fr;
-           
-
-            #partdreta{
-               
-                img{
-                    width: 680px;
-                    height: 640px;
-
-                    clip-path: inset(10% 0 0 0);
-                }
-
-                .paraules{
-                    p{
-                        position: absolute;
-                    }
-
-                    p:nth-child(1){
-                        top: 235px;
-                        left: 1065px;
-
-                        color: #1ba1ad;
-                    }
-
-                    p:nth-child(2){
-                        top: 276px;
-                        left: 870px;
-                    }
-
-                    p:nth-child(3){
-                        top: 224px;
-                        left: 980px;
-                    }
-
-                    p:nth-child(4){
-                        top: 257px;
-                        right: 110px;
-
-                        color: #1ba1ad;
-                    }
-                }
-
-                .dos{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-
-                    div{
-                        display: flex;
-                        align-items: center;
-
-                        div{
-                            background-image: url(./assets/icones_sprite.png);
-                                
-                            background-repeat: no-repeat;
-                            width: 30px;
-                            height: 30px;
-                            background-size: 850px;
-                            float: right;
-                            float: left;
-                        }
-
-                        .em1{
-                            background-position: -150px -10px;
-                        }
-
-                        .em2{
-                            background-position: -105px -8px;
-                            margin-left: 40px;
-                        }
-
-                        p{
-                            margin-left: 10px;
-                        }
-                    }
-                }
-                
-                
-            }
-            
-            #partesquerra{
-                width: 600px;
-
-                margin-top: 40px;
-
-                .exp {
-                    margin-top: 40px;
-                }
-
-                .container {
-                    display: flex;
-                    align-items: start;
-
-                    margin-top: 30px;
-
-                    padding: 0;
-                    
-                    .estrella {
-                        background-image: url(./assets/icones_sprite.png);
-                        background-repeat: no-repeat;
-                        width: 30px;
-                        height: 30px;
-                        background-size: 550px;
-                        float: left;
-                    }
-                    
-                    .p2 {
-                        margin: 0;
-                        display: flex;
-                        align-items: start;
-                        width: 400px;
-    
-                        margin-top: 3px;
-                    }
-                }
-
-                .botons{
-                    display: flex;
-                    align-items: center;
-
-                    button{
+                header{
+                    background-color: transparent;
+        
+                    .opacitatBuscador{
+                        background-color: rgba(255, 255, 255, 0.205);
+                    }   
+        
+                    .navegacio{
                         display: flex;
                         justify-content: center;
-                        align-items: center;
-    
-                        margin-top: 50px;
-    
-                        .flecha{
+        
+                        p:not(:first-of-type){
+                            padding: 20px;
+                            margin-left: 30px;
+                        }
+                    }
+                }
+        
+                #part1{
+                    display: grid;
+        
+                    grid-template-columns: 1fr 1fr;
+                   
+        
+                    #partdreta{
+                       
+                        img{
+                            width: 720px;
+                            height: 640px;
+                        }
+        
+                        .paraules{
+                            p{
+                                position: absolute;
+                            }
+        
+                            p:nth-child(1){
+                                top: 210px;
+                                left: 1070px;
+        
+                                color: #1ba1ad;
+                            }
+        
+                            p:nth-child(2){
+                                top: 248px;
+                                left: 880px;
+                            }
+        
+                            p:nth-child(3){
+                                top: 305px;
+                                left: 990px;
+                            }
+        
+                            p:nth-child(4){
+                                top: 336px;
+                                right: 325px;
+        
+                                color: #1ba1ad;
+                            }
+                        }
+        
+                        .dos{
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+        
+                            div{
+                                display: flex;
+                                align-items: center;
+        
+                                div{
+                                    background-image: url(./assets/icones_sprite.png);
+                                        
+                                    background-repeat: no-repeat;
+                                    width: 30px;
+                                    height: 30px;
+                                    background-size: 850px;
+                                }
+        
+                                .em1{
+                                    background-position: -150px -10px;
+                                }
+        
+                                .em2{
+                                    background-position: -105px -8px;
+                                    margin-left: 40px;
+                                }
+        
+                                p{
+                                    margin-left: 10px;
+                                    margin-top: 10px;
+                                }
+                            }
+                        }
+                        
+                        
+                    }
+                    
+                    #partesquerra{
+                        width: 600px;
+        
+                        margin-top: 40px;
+        
+                        .exp {
+                            margin-top: 40px;
+                        }
+        
+                        .container {
+                            display: flex;
+                            align-items: start;
+        
+                            margin-top: 30px;
+        
+                            padding: 0;
+                            
+                            .estrella {
+                                background-image: url(./assets/icones_sprite.png);
+                                background-repeat: no-repeat;
+                                width: 30px;
+                                height: 30px;
+                                background-size: 550px;
+                                float: left;
+                            }
+                            
+                            .p2 {
+                                margin: 0;
+                                display: flex;
+                                align-items: start;
+                                width: 400px;
+            
+                                margin-top: 3px;
+                            }
+                        }
+        
+                        .botons{
                             display: flex;
                             align-items: center;
-    
-                            background-image: url(./assets/icones_sprite.png);
-                            
-                            background-repeat: no-repeat;
-                            width: 30px;
-                            height: 30px;
-                            background-size: 650px;
-                            float: right;
-                            background-position: -510px 0;
-    
-                            filter: invert(71%) sepia(13%) saturate(7500%) hue-rotate(180deg) brightness(96%) contrast(213%);
-    
-                            margin-left: 10px;
+        
+                            button{
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+            
+                                margin-top: 50px;
+            
+                                .flecha{
+                                    display: flex;
+                                    align-items: center;
+            
+                                    background-image: url(./assets/icones_sprite.png);
+                                    
+                                    background-repeat: no-repeat;
+                                    width: 30px;
+                                    height: 30px;
+                                    background-size: 650px;
+                                    float: right;
+                                    background-position: -510px 0;
+            
+                                    filter: invert(71%) sepia(13%) saturate(7500%) hue-rotate(180deg) brightness(96%) contrast(213%);
+            
+                                    margin-left: 10px;
+                                }
+            
+                                .brujula{
+                                    background-image: url(./assets/icones_sprite.png);
+                                    
+                                    background-repeat: no-repeat;
+                                    width: 40px;
+                                    height: 40px;
+                                    background-size: 800px;
+                                    float: right;
+                                    background-position: -180px 0;
+                                }
+            
+                                .p1{
+                                    display: flex;  
+                                    align-items: center;
+                                    margin-bottom: 0;
+                                }
+            
+                                padding: 10px;
+                                float: left;
+            
+                                border-radius: 5px;
+                            }
+            
+                            .bot1{
+                                background-color: #3ddeed;
+                                border: 2px solid transparent;
+                                color: white;
+                                box-shadow: 0 0 2px 1px #3ddeed;
+                                transition: box-shadow 0.3s;
+            
+                                color: #182627;
+            
+                                height: 50px;
+                            }
+            
+                            .bot2{
+                                margin-left: 10px;
+                                background-color: transparent;
+                                color: white;
+                                box-shadow: 0 0 3px 1px white;
+            
+                                height: 45px;
+                            }
                         }
-    
-                        .brujula{
-                            background-image: url(./assets/icones_sprite.png);
-                            
-                            background-repeat: no-repeat;
-                            width: 40px;
-                            height: 40px;
-                            background-size: 800px;
-                            float: right;
-                            background-position: -180px 0;
+        
+                        .p2{
+                            margin-top: 30px;
                         }
-    
-                        .p1{
-                            display: flex;  
-                            align-items: center;
-                            margin-bottom: 0;
+        
+                        .emoticonos{
+                            display: flex;
+        
+                            div{
+                                background-image: url('./assets/icones_sprite.png');
+                                background-repeat: no-repeat;
+                                width: 40px;
+                                height: 40px;
+                                background-size: 750px;
+                                border: 1px solid white;
+                                padding: 7px;
+        
+        
+                                border-radius: 3px;
+        
+                                margin-left: 10px;
+                            }
+        
+                            .e1{
+                                background-position: -209px -2px;
+                            }
+        
+                            .e2{
+                                background-position: -251px -2px;
+                            }
+        
+                            .e3{
+                                background-position: -293px -2px;
+                            }
+        
+                            .e4{
+                                background-position: -335px -2px;
+                            }
                         }
-    
-                        padding: 10px;
-                        float: left;
-    
-                        border-radius: 5px;
                     }
-    
-                    .bot1{
-                        background-color: #3ddeed;
-                        border: 2px solid transparent;
-                        color: white;
-                        box-shadow: 0 0 2px 1px #3ddeed;
-                        transition: box-shadow 0.3s;
-    
-                        color: #182627;
-    
-                        height: 50px;
-                    }
-    
-                    .bot2{
-                        margin-left: 10px;
-                        background-color: transparent;
-                        color: white;
-                        box-shadow: 0 0 3px 1px white;
-    
-                        height: 45px;
+                }
+            }
+        }
+
+        #part2{
+            background-image: url('./assets/back2.png');
+
+            .contingut2{
+
+                .ulleres{
+
+                    img{
+                        height: 100%;  width: 900px;
                     }
                 }
 
-                .p2{
-                    margin-top: 30px;
-                }
+                .col2{
+                    margin-top: 60px;
 
-                .emoticonos{
-                    display: flex;
+                    h2{
+                        width: 550px;
+                    }
 
-                    div{
+                    .p1{
                         background-image: url('./assets/icones_sprite.png');
                         background-repeat: no-repeat;
-                        width: 40px;
-                        height: 40px;
-                        background-size: 750px;
-                        border: 1px solid white;
-                        padding: 7px;
+                        background-size: 650px;
+                        background-position: left 300px right 300px;
 
-
-                        border-radius: 3px;
-
-                        margin-left: 10px;
-                    }
-
-                    .e1{
-                        background-position: -209px -2px;
-                    }
-
-                    .e2{
-                        background-position: -251px -2px;
-                    }
-
-                    .e3{
-                        background-position: -293px -2px;
-                    }
-
-                    .e4{
-                        background-position: -335px -2px;
+                        width: 350px;
                     }
                 }
             }
