--- a/PracticaFinal/estil.less
+++ b/PracticaFinal/estil.less
@@ -304,7 +304,7 @@ html{
                         background-image: url('./assets/icones_sprite.png');
                         background-repeat: no-repeat;
                         background-size: 650px;
-                        background-position: left 300px right 300px;
+                        background-position: -40px;
 
                         width: 350px;
                     }
