--- a/PracticaFinal/estil.less
+++ b/PracticaFinal/estil.less
@@ -191,6 +191,7 @@ html{
                                     filter: invert(71%) sepia(13%) saturate(7500%) hue-rotate(180deg) brightness(96%) contrast(213%);
             
                                     margin-left: 10px;
+                                    margin-bottom: 5px;
                                 }
             
                                 .brujula{
@@ -289,12 +290,12 @@ html{
                 .ulleres{
 
                     img{
-                        height: 100%;  width: 900px;
+                        height: 100%;  width: 800px;
                     }
                 }
 
                 .col2{
-                    margin-top: 60px;
+                    margin-top: 100px;
 
                     h2{
                         width: 550px;
@@ -307,6 +308,102 @@ html{
 
                         width: 350px;
                     }
+                }
+            }
+
+            .contingut3{
+                margin-left: 200px;
+                .jane{
+                    width: 450px;
+                }
+
+                .vhead{
+                    width: 620px;
+                }
+
+                button{
+                    width: 170px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: #182627;
+                    
+                    color: #3ddeed;
+                    padding: 10px;
+
+                    .flecha{
+                        background-image: url(./assets/icones_sprite.png);
+                                    
+                        background-repeat: no-repeat;
+                        width: 30px;
+                        height: 30px;
+                        background-size: 650px;
+                        float: right;
+                        background-position: -510px 0;
+
+                        margin-left: 15px;
+                        margin-bottom: 1px;
+                    }
+                }
+
+                .play{
+                    height: 100%;
+                    width: 550px;
+                    clip-path: polygon(36% 3%, 100% 0, 100% 71%, 69% 100%, 0 100%, 1% 31%);
+                }
+            }
+
+            .contingut4{
+                margin-left: 200px;
+                margin-top: 220px;
+                .botons{
+                    display: flex;
+
+                    button{
+                        width: 50px;
+                        height: 40px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        background-color: #182627;
+                        
+                        color: #3ddeed;
+    
+                        .flecha{
+                            background-image: url(./assets/icones_sprite.png);
+                                        
+                            background-repeat: no-repeat;
+                            width: 30px;
+                            height: 30px;
+                            background-size: 650px;
+                            float: right;
+                            background-position: -510px 0;
+                            margin-bottom: 5px;
+                        }
+                    }
+
+                    button:nth-child(2){
+                        margin-left: 10px;
+                    }
+                }
+
+                .p3{
+                    width: 250px;
+                }
+
+                img{
+                    height: 100%;
+                    width: 400px;
+                    clip-path: polygon(78% 0, 100% 19%, 100% 100%, 0 100%, 0 0);
+                }
+
+                .row2{
+                    display: flex;
+                    align-items: center;
+                }
+
+                .p1{
+                    margin-left: 65px;
                 }
             }
         }
