--- a/PracticaFinal/estil.less
+++ b/PracticaFinal/estil.less
@@ -35,8 +35,43 @@ html{
         
                     .opacitatBuscador{
                         background-color: rgba(255, 255, 255, 0.205);
+
+                        .form-control{
+                            background-color: transparent;
+                            border: none;
+                        }
+
+                        .btn {
+                            width: 50px;
+                            height: 50px; 
+
+                            .lupa{
+                                background-image: url(./assets/icones_sprite.png);
+                                    
+                                background-repeat: no-repeat;
+                                width: 30px;
+                                height: 30px;
+                                background-size: 750px;
+                                background-position: -630px;
+    
+                            }
+                        }
                     }   
-        
+                    
+                    .si{
+                        display: flex;
+                        align-items: center;
+                        .bosa{
+                            background-image: url(./assets/icones_sprite.png);
+                                    
+                            background-repeat: no-repeat;
+                            width: 30px;
+                            height: 30px;
+                            background-size: 750px;
+                            background-position: -710px;
+                        }
+                    }
+
                     .navegacio{
                         display: flex;
                         justify-content: center;
@@ -288,7 +323,7 @@ html{
             .contingut2{
 
                 .ulleres{
-
+                    border-radius: 50%;
                     img{
                         height: 100%;  width: 800px;
                     }
@@ -353,10 +388,86 @@ html{
                     }
                 }
 
-                .play{
-                    height: 100%;
-                    width: 550px;
-                    clip-path: polygon(36% 3%, 100% 0, 100% 71%, 69% 100%, 0 100%, 1% 31%);
+                .superpos{
+                    position: relative;
+                    .play{
+                        height: 100%;
+                        width: 550px;
+                        clip-path: polygon(39% 0, 100% 0, 100% 63%, 70% 100%, 0 100%, 0 35%);
+                    }
+    
+                    .twit{
+                        height: 250px;
+                        width: 340px;
+                        background-color: white;
+
+                        position: absolute;
+                        top: 260px;
+                        left: -130px;
+
+                        img{
+                            border-radius: 50%;
+                            width: 60px;
+                        }
+
+                        color: black;
+
+                        .gris{
+                            color: rgb(134, 131, 131);
+                        }
+
+                        .blau{
+                            color: rgb(0, 195, 255);
+                        }
+
+                        .coment{
+                            background-image: url(./assets/icones_sprite.png);
+                                    
+                            background-repeat: no-repeat;
+                            width: 30px;
+                            height: 30px;
+                            background-size: 850px;
+                            float: right;
+                            background-position: -430px -4px;
+                            margin-left: 35px;
+                        }
+                        
+                        .rtt{
+                            background-image: url(./assets/icones_sprite.png);
+                                    
+                            background-repeat: no-repeat;
+                            width: 30px;
+                            height: 30px;
+                            background-size: 850px;
+                            float: right;
+                            background-position: -575px -4px;
+                            margin-left: 35px;
+                        }
+
+                        .cor{
+                            background-image: url(./assets/icones_sprite.png);
+                                    
+                            background-repeat: no-repeat;
+                            width: 30px;
+                            height: 30px;
+                            background-size: 850px;
+                            float: right;
+                            background-position: -480px -4px;
+                            margin-left: 35px;
+                        }
+
+                        .desc{
+                            background-image: url(./assets/icones_sprite.png);
+                                    
+                            background-repeat: no-repeat;
+                            width: 30px;
+                            height: 30px;
+                            background-size: 850px;
+                            float: right;
+                            background-position: -530px -4px;
+                            margin-left: 35px;
+                        }
+                    }
                 }
 
                 .fotos{
@@ -479,38 +590,68 @@ html{
             }
 
             footer{
-                .logo{
-                    height: auto;
-                    width: 180px;
+                background-color: #271e33;
+                width: 100%;
+                margin-top: 50px;
+                div{
+                    .logo{
+                        height: auto;
+                        width: 180px;
+                    }
+
+                    .emotes{
+                        display: flex;
+
+                        div{
+                            background-image: url('./assets/icones_sprite.png');
+                            background-repeat: no-repeat;
+                            width: 30px;
+                            height: 30px;
+                            background-size: 750px;
+
+                            margin-left: 20px;
+                        }
+                        .em1{
+                            background-position: -210px;
+                        }
+
+                        .em2{
+                            background-position: -253px;
+                        }
+
+                        .em3{
+                            background-position: -293px;
+                        }
+
+                        .em4{
+                            background-position: -335px;
+                        }
+                    }
+
+                    .sub{
+                        .form-control{
+                            height: 60px;
+                            background-color: #271e33;
+                            border: 1px solid rgb(73, 73, 73);
+                        }
+
+                        .btn-primary{
+                            height: 60px;
+                            width: 100px;
+                        }
+                    }
+
+                    .col1{
+                        margin-left: 200px;
+                    }
+
+                    .col4{
+                        margin-right: 200px;
+                    }
                 }
-
-                .emotes{
-                    display: flex;
-
-                    div{
-                        background-image: url('./assets/icones_sprite.png');
-                        background-repeat: no-repeat;
-                        width: 30px;
-                        height: 30px;
-                        background-size: 750px;
-
-                        margin-left: 20px;
-                    }
-                    .em1{
-                        background-position: -210px;
-                    }
-
-                    .em2{
-                        background-position: -253px;
-                    }
-
-                    .em3{
-                        background-position: -293px;
-                    }
-
-                    .em4{
-                        background-position: -335px;
-                    }
+                hr{
+                    height: 3px;
+                    background: linear-gradient(to right, transparent, purple, transparent);
                 }
             }
         }
